fix(profile): replaced mock profile image

--- a/src/app/components/sections/profile/profile.component.html
+++ b/src/app/components/sections/profile/profile.component.html
@@ -7,7 +7,7 @@
       <div class="card-body">
 
         <div class="d-flex flex-column flex-md-row align-items-md-center mb-3">
-          <img [src]="user?.profileImage || 'https://via.placeholder.com/80'" class="rounded-circle me-md-3 mb-2 mb-md-0" width="80" height="80" alt="Profile Photo">
+          <img [src]="user?.profileImage || 'https://mockmind-api.uifaces.co/content/human/90.jpg'" class="rounded-circle me-md-3 mb-2 mb-md-0" width="80" height="80" alt="Profile Photo">
           <div>
             <button type="button" class="btn btn-outline-success btn-sm me-2">Upload new photo</button>
             <button type="button" class="btn btn-outline-danger btn-sm">Delete</button>
