--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -6,7 +6,8 @@
   padding: 1.5rem 0.8rem 1.2rem 0.8rem;
   margin: 8rem auto 5rem auto;
   width: 100%;
-  max-width: 95vw;
+  /* max-width: 95vw; */
+  max-width: none;
   display: flex;
   flex-direction: column;
   gap: 1.1rem;
