--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import url("https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap");
 
+html {
+  scroll-behavior: smooth;
+}
+
 /* Global Custom Scrollbar */
 ::-webkit-scrollbar {
   width: 10px;
@@ -12,9 +16,9 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #d5fd35;
+  background-color: #d2f34c;
   border-radius: 10px;
-  border: 2px solid;
+  border: 2px solid transparent;
   background-clip: content-box;
 }
 
@@ -22,8 +26,15 @@
   background-color: #c0e637;
 }
 
+/* Hide scrollbar arrow buttons */
+::-webkit-scrollbar-button {
+  display: none;
+  height: 0;
+  width: 0;
+}
+
 /* Firefox support */
 * {
   scrollbar-width: thin;
-  scrollbar-color: #d5fd35 #ffff;
+  scrollbar-color: #d2f34c #ffff;
 }
