--- a/src/app/job-wishlist/job-wishlist.component.html
+++ b/src/app/job-wishlist/job-wishlist.component.html
@@ -114,7 +114,7 @@
           </div>
           <h3>No saved jobs yet</h3>
           <p>Start exploring jobs and save the ones you're interested in!</p>
-          <button class="btn btn-primary">Browse Jobs</button>
+          <button class="btn btn-primary" routerLink="/jobs">Browse Jobs</button>
         </div>
       </div>
     </div>
