--- a/src/app/jobs-list/jobs-list.component.html
+++ b/src/app/jobs-list/jobs-list.component.html
@@ -18,9 +18,11 @@
             <span class="badge bg-primary mb-2">{{ job.job_type }}</span>
             <div class="text-muted mb-2">{{ job.location }}</div>
             <div class="text-success fw-bold mb-3">₦{{ job.salary }}</div>
-            <p class="job-description">{{ job.job_description }}</p>
+            <!-- <p class="job-description">{{ job.job_description }}</p> -->
           </div>
-          <button class="btn btn-outline-primary w-100 mt-3">APPLY</button>
+          <a [routerLink]="['/jobs/jobdetails', job.job_id]">
+            <button class="btn btn-outline-primary w-100 mt-3">APPLY</button>
+          </a>
         </div>
       </div>
     </div>
