--- a/src/app/features/dashboard/seeker-dashboard/seeker-dashboard.component.html
+++ b/src/app/features/dashboard/seeker-dashboard/seeker-dashboard.component.html
@@ -105,7 +105,7 @@
           <i class="fas fa-bell"></i>
           <span class="notification-badge"></span>
         </button>
-        <button class="search-job-btn">Hunt Jobs</button>
+        <button class="search-job-btn" routerLink="/jobs">Hunt Jobs</button>
       </div>
     </header>
     <!-- This is where your routed content will appear -->
