--- a/src/app/job-details/job-details.component.html
+++ b/src/app/job-details/job-details.component.html
@@ -34,9 +34,16 @@
 
 
     <div class="mt-5">
-      <button class="btn btn-success me-2" *ngIf="userRole === 'job_seeker' || '' " (click)="onApplyNow()">Apply Now</button>
+      <!-- Show Apply button if role is job_seeker OR user is not logged in -->
+      <button class="btn btn-success me-2" *ngIf="!userRole || userRole === 'job_seeker'" [disabled]="hasApplied"
+        (click)="onApplyNow()">
+        {{ hasApplied ? 'Already Applied' : 'Apply Now' }}
+      </button>
+
       <button class="btn btn-outline-secondary" (click)="onSaveJob()">Save Job</button>
     </div>
+
+
   </ng-container>
 </div>
 
