feat(navbar): add role-based dashboard navigation with toast feedback
- Keep Dashboard link visible for all users
- Added click handler to route users based on role (job seeker, employer, admin)
- Show error toast and redirect to login for visitors
- Added success toasts for logged-in users when navigating to dashboard

--- a/src/app/components/sections/navbar/navbar.component.html
+++ b/src/app/components/sections/navbar/navbar.component.html
@@ -17,8 +17,7 @@
           <a class="nav-link" href="#" (mouseenter)="showMegaDropdown = true" (mouseleave)="showMegaDropdown = false">
             Explore
           </a>
-          <div *ngIf="showMegaDropdown"
-            class="mega-dropdown p-4 bg-white shadow animate__animated animate__fadeInUp"
+          <div *ngIf="showMegaDropdown" class="mega-dropdown p-4 bg-white shadow animate__animated animate__fadeInUp"
             (mouseenter)="showMegaDropdown = true" (mouseleave)="showMegaDropdown = false"
             [ngClass]="{'animate__fadeInUp': showMegaDropdown}">
             <div class="row">
@@ -63,7 +62,7 @@
           <a class="nav-link" routerLink="/contact">Contact</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/dashboard">Dashboard</a>
+          <a class="nav-link" href="#" (click)="goToDashboard($event)">Dashboard</a>
         </li>
       </ul>
 
