--- a/src/app/jobs-list/jobs-list.component.html
+++ b/src/app/jobs-list/jobs-list.component.html
@@ -20,7 +20,7 @@
             <div class="text-success fw-bold mb-3">₦{{ job.salary }}</div>
             <!-- <p class="job-description">{{ job.job_description }}</p> -->
           </div>
-          <a [routerLink]="['/jobs/jobdetails', job.job_id]">
+          <a [routerLink]="['/jobdetails', job.job_id]">
             <button class="btn btn-outline-primary w-100 mt-3">APPLY</button>
           </a>
         </div>
