--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -8,7 +8,7 @@
       </div>
     </div>
     <div class="signupForm">
-      <h1 class="signupH1 text-success text-center mb-3">Create Account</h1>
+      <h1 class="signupH1 text-center mb-3">Create Account</h1>
       <form method="post" #form="ngForm" novalidate>
         <div class="form-group">
           <label for="fname" class="form-label">First Name</label>
@@ -75,6 +75,17 @@
           </select>
           <div *ngIf="jobrole.invalid && jobrole.touched" class="invalid-feedback d-block">
             <span *ngIf="jobrole.hasError('required')">This field is required</span>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label class="form-check-label" for="terms">
+            <input type="checkbox" id="terms" name="terms" [(ngModel)]="termsAccepted" #terms="ngModel"
+              [class.is-invalid]="terms.invalid && terms.dirty" required class="form-check-input" />
+            By hitting the Register button, you agree to the <a href="#" style="color: #31795a; text-decoration: none;">Terms conditions & Privacy Policy</a>
+          </label>
+          <div *ngIf="terms.invalid && terms.dirty" class="invalid-feedback d-block">
+            <span *ngIf="terms.hasError('required')">You must accept the terms and conditions</span>
           </div>
         </div>
 
